# bloomberg-competition-2025

./: .env.example  .gitignore  ACADEMIC_ENHANCEMENTS_COMPLETE.md  ACADEMIC_IMPROVEMENTS_SUMMARY.md  CLEANUP_COMPLETE.md  COMMIT_SUMMARY.md  DEFENSE_PACKAGE.md  DEFENSE_PRESENTATION_DATA.md  DEFENSE_QUE_CARD.md  DEFENSE_TALKING_POINTS.md  EMERGENCY_RESEARCH_COMPLETED.md  EXPERIMENTS_REORGANIZATION_SUMMARY.md  FAMA_MACBETH_PIPELINE_STATUS.md  FDR_CROSS_VALIDATION_RESULTS.md  FDR_TEST_SUCCESS.md  FDR_TRAINING_RUN.md  IMPLEMENTATION_COMPLETE.md  MOMENTUM_ANALYSIS_SUMMARY.md  PRESENTATION_IMPLEMENTATION_GUIDE.md  PURE_FACTOR_BASELINE_ANALYSIS.md  QUICK_REFERENCE.md  README.md  REAL_BASELINE_ANALYSIS.md  ROOT_DIRECTORY_STRUCTURE.md  URGENT_FINAL_SUMMARY.md  discover_features.py  messages.md  monitor_fdr_training.py  monitoring_dashboard_demo.html  phase5_demo.py  pyproject.toml  repomix-output.md  run_experiment.py  run_feature_comparison.py  run_ff5_box_experiment.py  run_metamodel_experiment.py  run_ml_strategy.py  run_ml_strategy_clean.py  run_ml_strategy_fast.py  run_strategy.py  (+14 more)
.claude/: config.json
.code-review-tracker/: 00_OVERALL_PLAN.md  01_PIPELINE_VALIDATION_REPORT.md  02_PIPELINE_FIXES.md  03_TDD_CYCLE.md  04_TDD_SUMMARY.md  05_TDD_STATUS.md  06_GREEN_PHASE_REPORT.md  07_FINAL_TDD_REPORT.md  08_TDD_EXECUTIVE_SUMMARY.md  09_LSP_FIX_SUMMARY.md  10_CONFIG_AUDIT.md  11_CONFIG_FIX_REPORT.md  12_CONFIG_FIX_COMPLETE.md  config_inventory.md  fix_src_imports.py
analysis/: momentum_importance_report.json  pure_factor_quick_est.py  t2_alpha_vs_expected_return_analysis.md  validate_residual_momentum.py
configs/: CONFIG_REGISTRY.yaml  FEATURE_ENGINEERING_GUIDE.md  README.md  archive_production_experiment.yaml  country_risk_config.yaml  dual_momentum_config.yaml  e2e_ff5_experiment.yaml  e2e_refactoring_test.yaml  example_config.yaml  system_config.yaml  (+19 more)
(+460 files in other folders)
