[project]
name = "bloomberg-competition"
version = "0.1.0"
description = "Quantitative trading system for Bloomberg competition"
authors = [
    {name = "Team"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "yfinance>=0.2.18",
    "wandb>=0.16.0",
    "optuna>=3.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
