[project]
name = "bloomberg-competition"
version = "0.1.0"
description = "Quantitative trading system for Bloomberg competition"
authors = [
    {name = "Team"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "yfinance>=0.2.18",
    "wandb>=0.16.0",
    "optuna>=3.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
    # Machine Learning dependencies
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "ta>=0.10.2",
    "scipy>=1.11.0",
    "lightgbm>=3.3.0",
    "statsmodels>=0.14.0",
    "pytest (>=8.4.2,<9.0.0)",
    "vulture (>=2.14,<3.0)",
    "psutil (>=7.1.0,<8.0.0)",
    "torch (>=2.0.0,<2.5.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
